Cleaned Up code

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <script src="js/index.js"></script>
     </body>
     <footer style="text-align: center; width: 100%;"> 
-        <a href="https://github.com/">Link to Repository</a> 
+        <a href="https://github.com/ShanTen/MicroLogger">Link to Repository</a> 
     </footer>
 </html>
