--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <br>
 
         <div class="blogPart"></div>
-        <script src="js/data.js"></script>
-        <script src="js/index.js"></script>
+
+        <script src="./js/data.js"></script>
+        <script src="./js/index.js"></script>
+
     </body>
     <footer style="text-align: center; width: 100%;"> 
         <a href="https://github.com/ShanTen/MicroLogger">Link to Repository</a> 
